--- a/public/profile.html
+++ b/public/profile.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="/images/apple-touch-icon.png"
@@ -25,7 +25,7 @@
       sizes="16x16"
       href="/images/favicon-16x16.png"
     />
-    <link rel="manifest" href="/images/site.webmanifest" /> -->
+    <link rel="manifest" href="/images/site.webmanifest" />
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
@@ -121,7 +121,6 @@
           <form
             class="card avatar-upload"
             enctype="multipart/form-data"
-            method="PUT"
             id="profileAviUpdate"
           >
             <h3>Profile Avatar</h3>
