--- a/public/explorer.html
+++ b/public/explorer.html
@@ -182,10 +182,10 @@
           <h3>Subscriptions</h3>
           <div class="table"></div>
         </div>
-        <div class="popular channels-live">
+<!--         <div class="popular channels-live">
           <h3>Live</h3>
           <div class="table"></div>
-        </div>
+        </div> -->
       </div>
 
       <div class="ticket-purchase">
