--- a/public/profile.html
+++ b/public/profile.html
@@ -187,7 +187,7 @@
               <div class="card dislikes"></div>
               <div class="card comments"></div>
               <div class="card subscribers-analytics"></div>
-              <div class="card productsSolds"></div>
+<!--               <div class="card productsSolds"></div> -->
             </div>
           </div>
 
@@ -227,7 +227,7 @@
                   </table>
                 </div>
               </div>
-              <div class="shop">
+<!--               <div class="shop">
                 <div class="graph">
                   <h2>Merchandise</h2>
                   <div
@@ -261,7 +261,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="screen newUpload">
           <form
