--- a/public/profile.html
+++ b/public/profile.html
@@ -192,7 +192,7 @@
           </div>
 
           <div class="dashboard">
-            <h1>Videos/Marketplace Earnings</h1>
+            <h1>Rental Earnings</h1>
             <div class="graphs">
               <div class="videos">
                 <div class="graph">
