--- a/public/profile.html
+++ b/public/profile.html
@@ -97,26 +97,8 @@
         </div>
         <div class="screen settings">
           <div class="user-about">
-            <div class="about location">
-              <span
-                class="textarea"
-                contenteditable="false"
-                role="textbox"
-                id="location"
-                name="title"
-              ></span
-              ><i class="fa-solid fa-pen"></i>
-            </div>
-            <div class="about bio">
-              <span
-                class="textarea"
-                contenteditable="false"
-                role="textbox"
-                id="bio"
-                name="title"
-              ></span
-              ><i class="fa-solid fa-pen"></i>
-            </div>
+            <div class="about location"></div>
+            <div class="about bio"></div>
           </div>
           <form
             class="card avatar-upload"
