--- a/public/profile.html
+++ b/public/profile.html
@@ -277,10 +277,10 @@
               </div>
               <div class="categories">
                 <h2>Upload Category</h2>
-                <div class="content-type">
+                <div class="content-category">
                   <input
                     type="radio"
-                    name="content_type"
+                    name="content_category"
                     value="film"
                     id="film"
                   />
@@ -288,7 +288,7 @@
                   <br />
                   <input
                     type="radio"
-                    name="content_type"
+                    name="content_category"
                     value="shows"
                     id="shows"
                   />
@@ -296,7 +296,7 @@
                   <br />
                   <input
                     type="radio"
-                    name="content_type"
+                    name="content_category"
                     value="vlog"
                     id="vlog"
                   />
@@ -304,16 +304,16 @@
                   <br />
                   <input
                     type="radio"
-                    name="content_type"
+                    name="content_category"
                     value="other"
                     id="other"
                   />
                   <label>Other</label>
                 </div>
-                <div class="paid-content">
+                <div class="content-class">
                   <input
                     type="radio"
-                    name="paid_content"
+                    name="content_class"
                     value="free"
                     id="free"
                   />
@@ -321,7 +321,7 @@
                   <br />
                   <input
                     type="radio"
-                    name="paid_content"
+                    name="content_class"
                     value="pay"
                     id="rent"
                     disabled
