--- a/public/profile.html
+++ b/public/profile.html
@@ -289,7 +289,7 @@
                   <input
                     type="radio"
                     name="content_category"
-                    value="shows"
+                    value="series"
                     id="shows"
                   />
                   <label>Show/Webseries</label>
@@ -322,7 +322,7 @@
                   <input
                     type="radio"
                     name="content_class"
-                    value="pay"
+                    value="paid"
                     id="rent"
                     disabled
                   />
