--- a/public/vendor-subscription.html
+++ b/public/vendor-subscription.html
@@ -50,8 +50,8 @@
         <button class="btn">Subscribe</button>
       </div>
       <div class="goBack">
-        <button class="back" onclick="window.location.href='marketplace';">
-          Back to Marketplace
+        <button class="back" onclick="window.location.href='profile';">
+          Back to my Profile.
         </button>
       </div>
       <img id="logo" src="/public/Logo%20Black.png" alt="Fari-Logo" />
