--- a/public/profile.html
+++ b/public/profile.html
@@ -343,11 +343,11 @@
                       font-family: 'Teko';
                       width: 25rem;
                       font-weight: 700;
+                      font-size: 16px;     
                     "
                   >
                     For Rentals: Please ensure that you have completed vendor
-                    registration, <br />in the Marketplace, to receive payment
-                    for customer purchases! Thank You.
+                    registration, to receive payment for purchases! Thank You.
                   </h5>
                 </div>
               </div>
