--- a/public/profile.html
+++ b/public/profile.html
@@ -343,11 +343,10 @@
                       font-family: 'Teko';
                       width: 25rem;
                       font-weight: 700;
-                      font-size: 16px;     
+                      font-size: 18px;     
                     "
                   >
-                    For Rentals: Please ensure that you have completed vendor
-                    registration, to receive payment for purchases! Thank You.
+                    For Rentals: Please ensure that you have completed vendor registration. Thank you.
                   </h5>
                 </div>
               </div>
