--- a/public/profile.html
+++ b/public/profile.html
@@ -179,7 +179,7 @@
  <div class="progress subscription">
 <i class="fa fa-check" aria-hidden="true"></i><h1> Step 2: Vendor Subscription($18.99/Monthly)</h1>
   </div>
-<div class="subscriptions">
+<div class="monthly-subscription">
 <button class="btn">Subscribe</button>
 </div>
   </div>
