--- a/public/profile.html
+++ b/public/profile.html
@@ -438,7 +438,7 @@
                       font-size: 18px;     
                     "
                   >
-                    For Rentals: Please ensure that you have completed vendor registration. Thank you.
+                    For Rentals: Please ensure that you have completed vendor registration within settings. Thank you.
                   </h5>
                 </div>
               </div>
