--- a/public/profile.html
+++ b/public/profile.html
@@ -426,6 +426,7 @@
                     value="0.00"
                     placeholder="0.00"
                     id="rentalprice"
+                    disabled     
                   />
                 </div>
                 <div class="message">
