--- a/public/order-complete.html
+++ b/public/order-complete.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Fari | Thank You - Video Purchase Complete</title>
- <link rel="preolaod stylesheet" as="style" href="success.css">
+ <link rel="preolaod stylesheet" as="style" href="order-complete.css">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
@@ -13,7 +13,7 @@
    
    </script>
 
-    <script defer src="success_obfu.js"></script>
+    <script defer src="order-complete.js"></script>
     
   </head>
 
