--- a/public/profile.html
+++ b/public/profile.html
@@ -182,6 +182,12 @@
 <div class="monthly-subscription">
 <button class="btn">Subscribe</button>
 </div>
+   <h4 id="support">Questions? Contact us at support@letsfari.com</h4>
+        
+        <div class="registration-complete">
+          <h2> You're registered!</h2>
+          <h4>Questions? Contact us at support@letsfari.com</h4>
+        </div>     
   </div>
     </div>
 </div>
