--- a/public/profile.html
+++ b/public/profile.html
@@ -168,7 +168,7 @@
           </form>
     </div>
     <div class="section registration"style="display: none">
-      <div class="content">
+      <div class="reg-process">
 
  <div class="progress connection"> 
 <i class="fa fa-check" aria-hidden="true"></i><h1> Step 1: Connect to us with via Stripe</h1>
@@ -183,12 +183,12 @@
 <button class="btn">Subscribe</button>
 </div>
    <h4 id="support">Questions? Contact us at support@letsfari.com</h4>
-        
-        <div class="registration-complete">
+  </div>
+      
+           <div class="registration-complete">
           <h2> You're registered!</h2>
           <h4>Questions? Contact us at support@letsfari.com</h4>
-        </div>     
-  </div>
+        </div>  
     </div>
 </div>
   
