--- a/public/profile.html
+++ b/public/profile.html
@@ -98,7 +98,7 @@
         <div class="settings">
   <div class="left-menu">
     <ul>
-      <li class="selected-settings" id="info">Channel Info</li>
+      <li class="selected-settings" id="info">About</li>
       <li id="update-avatar">Update Avatar</li>
       <li id="update-poster">Update Poster</li>
       <li id="registration">Vendor Registration</li>
