--- a/public/profile.html
+++ b/public/profile.html
@@ -107,7 +107,16 @@
   <div class="settings-main-view">
     <div class="section info">
       <div class="about location"></div>
-      <div class="about bio"></div>
+      <div class="about bio">
+               <span
+                class="textarea"
+                contenteditable="false"
+                role="textbox"
+                id="bio"
+                name="title"
+              ></span>
+       <i class="fa-solid fa-pen" id="edit-bio"></i>    
+      </div>
     </div>
     <div class="section avatar-update" style="display: none">
                 <form
