--- a/public/profile.html
+++ b/public/profile.html
@@ -106,7 +106,16 @@
   </div>
   <div class="settings-main-view">
     <div class="section info">
-      <div class="about location"></div>
+      <div class="about location">
+          <span
+                class="textarea"
+                contenteditable="false"
+                role="textbox"
+                id="location"
+                name="title"
+              ></span>
+	      <i class="fa-solid fa-pen" id="edit-location"></i>   
+      </div>
       <div class="about bio">
                <span
                 class="textarea"
