--- a/public/theater.html
+++ b/public/theater.html
@@ -37,21 +37,7 @@
     ></script>
     <script defer src="theater.js"></script>
   </head>
-  <header>
-    <i class="fa-solid fa-bars"></i>
-    <img id="logo" src="/images/Logo Black.png" alt="Fari-Logo" />
-    <div class="search">
-      <input type="search" id="searchfield" placeholder="Seach" />
-    </div>
-
-    <div class="retreat">
-      <button class="btn" title="Redirect to Explorer.">
-        <a href="/explorer" style="text-decoration: none; color: #dddddd"
-          >Explorer <i class="fa-solid fa-circle-right"></i
-        ></a>
-      </button>
-    </div>
-  </header>
+  <header></header>
 
   <body>
     <div class="content-container">
@@ -66,43 +52,61 @@
         </ul>
       </div>
 
-      <div class="main-content">
-        <div class="display-options">
-          <div class="options">
-            <ul class="views">
-              <li id="info">Info</li>
-              <li id="comments">Comments</li>
-            </ul>
-            <ul class="interactions"></ul>
-          </div>
-          <div class="feature-info"></div>
-          <div class="comments">
-            <input
-              id="comment"
-              type="text"
-              placeholder="Add a comment"
-            /><button id="send-comment">Send</button>
-            <div id="comment-count"></div>
-            <div class="usersComments"></div>
-          </div>
+      <div class="header">
+        <i class="fa-solid fa-bars"></i>
+        <img id="logo" src="/images/Logo Black.png" alt="Fari-Logo" />
+        <div class="search">
+          <input type="search" id="searchfield" placeholder="Seach" />
+        </div>
+
+        <div class="retreat">
+          <button class="btn" title="Redirect to Explorer.">
+            <a href="/explorer" style="text-decoration: none; color: #dddddd"
+              >Explorer <i class="fa-solid fa-circle-right"></i
+            ></a>
+          </button>
         </div>
       </div>
 
-      <div class="right-pane">
-        <div class="pane-options">
-          <h3 id="discover">Discover</h3>
-          <h3 id="watchlist-videos">Watchlist</h3>
-          <h3 id="favorite-videos">Favorites</h3>
-        </div>
-        <div class="discover-videos"></div>
-        <div class="fav-videos">
-          <div class="newUserMessage-favs message">
-            You do not have any Favorites yet.
+      <div class="center">
+        <div class="main-content">
+          <div class="display-options">
+            <div class="options">
+              <ul class="views">
+                <li id="info">Info</li>
+                <li id="comments">Comments</li>
+              </ul>
+              <ul class="interactions"></ul>
+            </div>
+            <div class="feature-info"></div>
+            <div class="comments">
+              <input
+                id="comment"
+                type="text"
+                placeholder="Add a comment"
+              /><button id="send-comment">Send</button>
+              <div id="comment-count"></div>
+              <div class="usersComments"></div>
+            </div>
           </div>
         </div>
-        <div class="later-videos">
-          <div class="newUserMessage-watchlater message">
-            You do not have any videos on your Watchlist yet.
+
+        <div class="right-pane">
+          <div class="pane-options">
+            <h3 id="discover">Discover</h3>
+            <h3 id="watchlist-videos">Watchlist</h3>
+            <h3 id="favorite-videos">Favorites</h3>
+          </div>
+          <div class="discover-videos"></div>
+          <div class="fav-videos">
+            <div class="newUserMessage-favs message">
+              You do not have any Favorites yet.
+            </div>
+          </div>
+          <div class="later-videos">
+            <div class="newUserMessage-watchlater message">
+              You do not have any videos on your Watchlist yet.
+            </div>
           </div>
         </div>
       </div>
