--- a/public/profile.html
+++ b/public/profile.html
@@ -216,66 +216,6 @@
             </div>
           </div>
 
-          <!--         <div class="screen settings">
-  <!--           <div class="user-about">
-              <div class="about location"></div>
-              <div class="about bio"></div> 
-            </div>
-            <form
-              class="card avatar-upload"
-              enctype="multipart/form-data"
-              id="profileAviUpdate">
-              <h3>Profile Avatar</h3>
-              <img
-                src="https://img.icons8.com/ios-filled/50/000000/upload-to-cloud--v1.png"
-                alt="avatar"
-                class="avatar-preview"
-                id="avatar-photo"
-              />
-              <button class="upload-btn">
-                <input
-                  type="file"
-                  id="avatar"
-                  name="avatar"
-                  accept=".jpeg, .png, .jpg, .gif"
-                  onchange="showPreviewAvi(event);"
-                  required
-                />
-                <h4>Select Avatar</h4>
-              </button>
-              <button class="upload-btn" id="submitAvatar">
-                <h4>Upload Avatar</h4>
-              </button>
-            </form>
-  
-            <form
-              class="card poster-upload"
-              enctype="multipart/form-data"
-              id="profilePosterUpdate"
-            >
-              <h3>Profile Poster</h3>
-              <img
-                src="https://img.icons8.com/ios-filled/50/000000/upload-to-cloud--v1.png"
-                alt="poster"
-                class="poster-preview"
-                id="poster-photo"
-              />
-              <button class="upload-btn">
-                <input
-                  type="file"
-                  id="channel-poster"
-                  name="channel-poster"
-                  accept=".jpeg, .png, .jpg, .gif"
-                  onchange="showPreviewPoster(event);"
-                  required
-                />
-                <h4>Select Poster</h4>
-              </button>
-              <button class="upload-btn" id="submitPoster">
-                <h4>Upload Poster</h4>
-              </button>
-            </form>
-          </div> -->
           <div class="screen subscriptions"></div>
           <div class="screen analytics">
             <div class="dashboard">
@@ -404,7 +344,7 @@
                       value="film"
                       id="film"
                     />
-                    <label>Movie/Film</label>
+                    <label>Film</label>
                     <br />
                     <input
                       type="radio"
@@ -412,7 +352,7 @@
                       value="series"
                       id="shows"
                     />
-                    <label>Show/Webseries</label>
+                    <label>Webseries</label>
                     <br />
                     <input
                       type="radio"
