remove subscribers analytics

--- a/public/profile.html
+++ b/public/profile.html
@@ -228,7 +228,7 @@
                 <div class="card likes"></div>
                 <div class="card dislikes"></div>
                 <div class="card comments"></div>
-                <div class="card subscribers-analytics"></div>
+                <!-- <div class="card subscribers-analytics"></div> -->
                 <!--               <div class="card productsSolds"></div> -->
               </div>
             </div>
