--- a/public/profile.html
+++ b/public/profile.html
@@ -320,19 +320,15 @@
                     id="title"
                     name="title"
                   ></span>
+                <div class="content-tags">
+                   <ul id="tags-list"><input id="tags-input" type="text" placeholder="tags"/></ul>
+                </div>
                   <span
                     class="textarea"
                     contenteditable
                     role="textbox"
                     id="description"
                     name="description"
-                  ></span>
-                  <span
-                    class="textarea"
-                    contenteditable
-                    role="textbox"
-                    id="tags"
-                    name="tags"
                   ></span>
                 </div>
                 <div class="categories">
