--- a/public/profile.html
+++ b/public/profile.html
@@ -321,7 +321,7 @@
                     name="title"
                   ></span>
                 <div class="content-tags">
-                   <ul id="tags-list"><input id="tags-input" type="text" placeholder="tags"/></ul>
+                   <ul id="tags-list"><input id="tags-input" type="text" placeholder="tags (click the spacebar to add tag)"/></ul>
                 </div>
                   <span
                     class="textarea"
