--- a/backend/public/password-reset.html
+++ b/backend/public/password-reset.html
@@ -125,7 +125,7 @@
 	  </form>	  
 
   <div>
-    <h5><a href="https://fari-test.netlify.app/login" style="color:#fdfbf9;">Back to Login</a></h5>
+    <h5><a href="https://fari-stage.netlify.app/login" style="color:#fdfbf9;">Back to Login</a></h5>
 </div>
 	</body>
     </html>
