--- a/backend/public/password-reset-success.html
+++ b/backend/public/password-reset-success.html
@@ -6,7 +6,7 @@
 
 <div class="password-reset-form" >
   <h1> Your password, has successfully been updated.</h1>
-    <h5><a href="https://fari-test.netlify.app/login" style="color:#fdfbf9;">Back to Login</a></h5>
+    <h5><a href="https://fari-stage.netlify.app/login" style="color:#fdfbf9;">Back to Login</a></h5>
 </div>
     
 <style>
