--- a/backend/public/password-reset-unsuccessful.html
+++ b/backend/public/password-reset-unsuccessful.html
@@ -6,7 +6,7 @@
 
 <div class="password-reset-form" >
   <h1> Your password was NOT updated successful, please try again.</h1>
-    <h5><a href="https://fari-test.netlify.app/login" style="color:#fdfbf9;">Forgot Password</a></h5>
+    <h5><a href="https://fari-stage.netlify.app/login" style="color:#fdfbf9;">Forgot Password</a></h5>
 </div>
     
 <style>
