--- a/public/explorer.html
+++ b/public/explorer.html
@@ -99,7 +99,7 @@
         <div class="search">
           <input type="search" id="searchfield" placeholder="Search" />
         </div>
-
+        <div class="loggedIn"></div>
         <i class="fa-solid fa-bars" id="main-view-bars"></i>
       </div>
       <div class="center">
