--- a/public/explorer.html
+++ b/public/explorer.html
@@ -100,7 +100,7 @@
           <input type="search" id="searchfield" placeholder="Search" />
         </div>
         <div class="loggedIn"></div>
-        <i class="fa-solid fa-bars" id="main-view-bars"></i>
+<!--         <i class="fa-solid fa-bars" id="main-view-bars"></i> -->
       </div>
       <div class="center">
         <div class="left-pane">
