--- a/public/explorer.html
+++ b/public/explorer.html
@@ -84,9 +84,9 @@
         </li>
         <li>
           <a
-            href="public/dashboard.html"
+            href="public/profile"
             style="color: #dddddd; text-decoration: none"
-            ><i class="fa-solid fa-circle-left"></i>Dashboard</a
+            ><i class="fa-solid fa-circle-left"></i>Profile</a
           >
         </li>
       </ul>
@@ -100,7 +100,6 @@
           <input type="search" id="searchfield" placeholder="Search" />
         </div>
         <div class="loggedIn"></div>
-<!--         <i class="fa-solid fa-bars" id="main-view-bars"></i> -->
       </div>
       <div class="center">
         <div class="left-pane">
