--- a/public/explorer.html
+++ b/public/explorer.html
@@ -47,7 +47,7 @@
   <header></header>
 
   <body>
-    <div class="nav">
+<!--     <div class="nav">
       <i class="fa-solid fa-x" id="main-view-x"></i>
 
       <ul>
@@ -59,7 +59,7 @@
         <h1>FARI.</h1>
       </div>
       <h5 id="logout">Logout</h5>
-    </div>
+    </div> -->
 
     <div class="mobile-nav">
       <i class="fa-solid fa-x" id="mobile-view-x"></i>
