--- a/public/explorer.html
+++ b/public/explorer.html
@@ -84,7 +84,7 @@
         </li>
         <li>
           <a
-            href="public/profile"
+            href="/profile"
             style="color: #dddddd; text-decoration: none"
             ><i class="fa-solid fa-circle-left"></i>Profile</a
           >
