--- a/public/login.html
+++ b/public/login.html
@@ -168,6 +168,8 @@
               <li id="special-character">At least one special character</li>
             </ul>
           </div>
+          <input type="checkbox" id="termsofuse" name="termsofuse" value="accepted">
+          <label for="vehicle1"> I agree to the <a href="/privacy-policy">terms and conditions</a></label><br>
 
           <button class="btn" id="reg-btn" type="submit">Register</button>
         </form>
