--- a/public/login.html
+++ b/public/login.html
@@ -168,8 +168,10 @@
               <li id="special-character">At least one special character</li>
             </ul>
           </div>
+          <div class="terms">
           <input type="checkbox" id="termsofuse" name="termsofuse" value="accepted">
-          <label for="vehicle1"> I agree to the <a href="/privacy-policy">terms and conditions</a></label><br>
+          <label for="termsofuse"> I agree to the <a href="/privacy-policy" style="color: blue">terms and conditions</a></label>
+          </div>
 
           <button class="btn" id="reg-btn" type="submit">Register</button>
         </form>
