--- a/public/explorer.html
+++ b/public/explorer.html
@@ -100,6 +100,23 @@
           <input type="search" id="searchfield" placeholder="Search" />
         </div>
         <div class="loggedIn"></div>
+        <div class="dropdown">
+  <div class="userinfo"></div>
+  </div>
+  <div class="dropdown-options">
+  <ul>
+    <li><i class="fa-regular fa-user"></i><a href="#">My Profile</a></li>
+    <li><i class="fa-solid fa-right-from-bracket"></i>Logout</li>
+    <li></li>
+    
+  </ul>
+  </div>
+  
+  <div class="support">
+    <ul>
+      <li><i class="fa-regular fa-circle-question"></i> Help</li>
+    </ul>
+  </div></div>
       </div>
       <div class="center">
         <div class="left-pane">
