--- a/public/explorer.html
+++ b/public/explorer.html
@@ -106,7 +106,7 @@
   <div class="dropdown-options">
   <ul>
     <li><i class="fa-regular fa-user"></i><a href="/profile">My Profile</a></li>
-    <li><i class="fa-solid fa-right-from-bracket"></i>Logout</li>
+    <li id="logout"><i class="fa-solid fa-right-from-bracket"></i>Logout</li>
     <li></li>
     
   </ul>
