--- a/public/explorer.html
+++ b/public/explorer.html
@@ -106,7 +106,7 @@
   <div class="dropdown-options">
   <ul>
     <li><i class="fa-regular fa-user"></i><a href="/profile">My Profile</a></li>
-    <li id="logout"><i class="fa-solid fa-right-from-bracket"></i><a href="mailto:support@letsfari.com">Logout</a></li>
+    <li id="logout"><i class="fa-solid fa-right-from-bracket"></i>Logout</li>
     <li></li>
     
   </ul>
@@ -114,7 +114,7 @@
   
   <div class="support">
     <ul>
-      <li><i class="fa-regular fa-circle-question"></i> Help</li>
+      <li><i class="fa-regular fa-circle-question"></i><a href="mailto:support@letsfari.com">Help</a></li>
     </ul>
   </div></div>
         
