--- a/public/profile.html
+++ b/public/profile.html
@@ -58,8 +58,8 @@
 
     <div class="content-container">
       <div class="header">
-        <img id="logo" src="/images/Logo Black.png" alt="Fari-Logo" />
-        <i class="fa-solid fa-bars" id="main-view-bars"></i>
+        <a href="/explorer"><img id="logo" src="/images/Logo Black.png" alt="Fari-Logo" /></a>
+<!--         <i class="fa-solid fa-bars" id="main-view-bars"></i> -->
       </div>
       <div class="center">
         <div class="left-pane">
