--- a/public/theater.html
+++ b/public/theater.html
@@ -54,7 +54,7 @@
 
       <div class="header">
         <i class="fa-solid fa-bars"></i>
-        <img id="logo" src="/images/Logo Black.png" alt="Fari-Logo" />
+        <a href="/explorer"><img id="logo" src="/images/Logo Black.png" alt="Fari-Logo" /></a>
         <div class="search">
           <input type="search" id="searchfield" placeholder="Seach" />
         </div>
