--- a/public/theater.html
+++ b/public/theater.html
@@ -59,13 +59,13 @@
           <input type="search" id="searchfield" placeholder="Seach" />
         </div>
 
-        <div class="retreat">
+<!--         <div class="retreat">
           <button class="btn" title="Redirect to Explorer.">
             <a href="/explorer" style="text-decoration: none; color: #dddddd"
               >Explorer <i class="fa-solid fa-circle-right"></i
             ></a>
           </button>
-        </div>
+        </div> -->
       </div>
 
       <div class="center">
